# adk-twilio-streaming-voice-2-voice

./: .gitignore  GEMINI.md  NOTES.md  README.md  TODO.org  pyproject.toml  run_local.sh
.github/workflows/: release-please.yml
agents/agentic-telephony/: GEMINI.md  agent.py  live_messaging.py  main.py
agents/agentic-telephony/mcp_service/: google_calendar.py
agents/agentic-telephony/scriptures/: setup-call.txt
agents/agentic_telephony/: GEMINI.md  TODO.org  __init__.py  agent.py  audio.py  live_messaging.py  main.py  pyproject.toml  requirements.txt
agents/agentic_telephony/mcp_service/: google_calendar.py  google_calendar_api.py
agents/content_builder/: pyproject.toml
agents/google_calendar_booking/: __init__.py  agent.py  main.py  pyproject.toml  requirements.txt  run_agent.py
agents/judge/: pyproject.toml
agents/orchestrator/: __init__.py
app/: __init__.py  main.py
tests/: conftest.py
tests/integration/: test_agent_loading.py
tests/unit/: test_escalation_checker.py
utils/: adkdb2josn.sh
