[project]
name = "agentic-telephony"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "a2a-sdk>=1.1.0",
    "fastapi>=0.138.0",
    "google-adk==2.3.0",
    "google-api-python-client>=2.197.0",
    "google-auth>=2.55.0",
    "google-cloud-logging>=3.16.0",
    "httpx>=0.28.1",
    "opentelemetry-exporter-gcp-logging>=1.12.0a0",
    "opentelemetry-exporter-gcp-trace>=1.12.0",
    "python-dotenv>=1.2.2",
    "soxr>=1.1.0",
    "twilio>=9.10.9",
    "uvicorn>=0.49.0",
]
