[project]
name = "google-calendar-booking-agent"
version = "0.1.0"
description = "Google Calendar Booking microservice agent"
requires-python = ">=3.10,<3.14"
dependencies = [
    "google-adk>=2.3.0",
]

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
